# pattern-cutting

./: .gitignore  .pre-commit-config.yaml  BodyMeasurements.py  Circle.py  DieLemmaDressBlock.py  Intersection.py  LineSegment.py  PolyLine.py  Rectangle.py  TheClassicTailoredTrouserBlock.py  angles.py  corners_and_sides.pymd  corners_and_sides.pymd.html  curly-flare-pattern-block.py  demo.py  layout.py  notebook.md  parallels.py  pyproject.toml  readme.md  readme.src.md  render.py  requirements.txt  run.sh  simple-example.py  style.css  vec2.py  vec2.test.py  velvet-caveat.py
aldrich/: tailored_skirt_block.py
geometry/: Arc.py  Circle.py  DistanceMarker.py  Group.py  Intersection.py  Line.py  LineSegment.py  PolyLine.py  PolyLine3.py  Shape.py  Shape3d.py  Vector.py  angles.py  bezier.py  isMovable.py  vec2.py  vec3.py
scripts/: DieLemmaDressBlock.py  TheClassicTailoredTrouserBlock.py  curly-flare-pattern-block.py
src/: SVGHyperlink.py  competition.py  constants.py  example_shapes.py  finishings.py  notches.py  point_grid.py  render.py  seams.py  spirograph.py  units.py
src/geometry/: Abstract_Group.py  Arc.py  Circle.py  Group.py  Group3d.py  Intersection.py  Line.py  LineSegment.py  Mesh.py  Shape.py  Shape3d.py  Triangulate.py  Vector.py  XYGraph.py  angles.py  bezier.py  matrix-transformations.py  matrix_transformations.py  seam_lines.py  triangle.py  tween.py  vec3.py
src/pattern_cutting/: BodyMeasurements.py  layout.py  render.py
src/patterns/: denim_bandicoot_glove.py
src/sizing/: tskenya.py  (+3 more)
tests/: test_angles.py  test_vector.py  vec2.test.py
(+18 files in other folders)
